--- a/client/src/App.css
+++ b/client/src/App.css
@@ -58,14 +58,18 @@ Dashboard Styles
 Form Styles
 */
 
-.form {
+.form, .students-list {
   margin: 0 auto;
-  width: 80%;
-  max-width: 600px;
+  width: 100%;
+  max-width: 800px;
   padding: 20px;
   border: 1px solid #ccc;
   border-radius: 10px;
   box-shadow: 2px 2px 10px #ccc;
+}
+
+.form {
+  margin-bottom: 20px;
 }
 
 .form-errors {
