--- a/client/src/Components/Lists/list.css
+++ b/client/src/Components/Lists/list.css
@@ -1,4 +1,6 @@
-.students-list, .courses-list, .results-list{
+.students-list,
+.courses-list,
+.results-list {
   margin-left: auto;
   margin-right: auto;
   padding: 20px;
@@ -6,45 +8,49 @@
 }
 
 table {
-    width: 100%;
-    margin-top: 1rem;
-    border-collapse: collapse;
+  width: 100%;
+  margin-top: 1rem;
+  border-collapse: collapse;
 }
 
-th, td {
-    border: 1px solid #ddd;
-    padding: 0.5rem;
-    text-align: left;
+th,
+td {
+  border: 1px solid #ddd;
+  padding: 0.5rem;
+  text-align: left;
 }
 
 th {
-    background-color: #f2f2f2;
+  background-color: #f2f2f2;
 }
 
 /* Pagination */
 .react-pagination-js-default ul {
-    display: flex;
-    justify-content: center;
-    margin-top: 1rem;
+  display: flex;
+  justify-content: center;
+  margin-top: 1rem;
 }
 
-.page, .is-active {
-    list-style: none;
-    margin: 0 0.5rem;
+.page,
+.is-active {
+  list-style: none;
+  margin: 0 0.5rem;
 }
 
-.page a, .is-active a{
-    color: #000;
-    padding: 0.5rem 1rem;
-    text-decoration: none;
-    transition: background-color 0.3s ease;
-    cursor: pointer;
+.page a,
+.is-active a {
+  color: #000;
+  padding: 0.5rem 1rem;
+  text-decoration: none;
+  transition: background-color 0.3s ease;
+  cursor: pointer;
 }
 
-.page a:hover, .page a.active {
-    background-color: #ddd;
+.page a:hover,
+.page a.active {
+  background-color: #ddd;
 }
 
 .is-active a {
-    background-color: #eee;
+  background-color: #eee;
 }
